Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ textarea {
 .container-fluid{
 	padding-top: 20px;
 	padding-bottom: 30px;
-	padding-right: 0px !important;
-	padding-left: 0px !important;
+	padding-right: auto !important;
+	padding-left: auto !important;
 	font: 12px "Montserrat", sans-serif;
 }
 .navbar{
